# server/src/types/series.ts
@@ -1,0 +1,7 @@
+/*
+  Types related to the Series model and code.
+ */
+
+export type SeriesFetchOpts = {
+  publisher?: boolean;
+};
